# single-view-to-multiview-fusion

./: .gitignore  README.md  conda_environment.yml  conda_packages.txt  justfile  pyproject.toml
config/: local.json
notebooks/: transformer_tutorial.ipynb
pipelines/: common.py  gradient_analysis.py  gradient_features.py  monitoring.py  tensorflow_unet3d.py  training.py  unet3d.py
pipelines/inference/: backend.py  model.py
pipelines/local/: analyze_tiff.py  extract_patches.py  mac_train.py
pipelines/utils/: memory_monitor.py  patch_dataset.py
tests/: conftest.py  flowmixin_flow.py  test_common_flowmixin.py  test_common_packages.py  test_data_loading.py  test_fixtures.py  test_monitoring.py  test_training.py  test_training_evaluate.py  test_training_register.py  test_training_train.py
tests/model/: conftest.py  test_model_artifacts.py  test_model_backend.py  test_model_predict.py
tests/model/pipelines/: common.py  training.py  unet3d.py
tests/pipelines/: common.py  monitoring.py  training.py
tests/pipelines/inference/: model.py
